1.Created Adapter for recycler view with static data. 2.Designed layout for news row item.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">News</string>
+    <string name="news_image">News image</string>
+    <string name="see_news_details">Click for News deatils</string>
 </resources>
