--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,7 @@
 <resources>
-    <string name="app_name">News</string>
-    <string name="news_image">News image</string>
-    <string name="news_content_unavailable">Sorry News details unavailable!!</string>
-    <string name="see_news_details">Click for News details</string>
+    <string name="app_name">Facts</string>
+    <string name="facts_image">Facts image</string>
+    <string name="see_fact_details">Click for fact details</string>
     <string name="try_again">Try Again</string>
     <string name="no_internet_connection">No Internet Connection!!</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
